--- a/public/css/main.css
+++ b/public/css/main.css
@@ -648,7 +648,7 @@ header {
       header nav ul li a {
         color: #5b6775;
         font-size: 19px;
-        font-weight: bold; }
+        font-weight: lighter; }
         header nav ul li a i {
           font-weight: normal !important;
           padding-right: 3px;
@@ -660,6 +660,53 @@ header {
 
 .headerNoUser {
   display: none; }
+
+header.header-profile {
+  width: 100%;
+  height: 85px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: transparent;
+  padding: 0 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  box-shadow: none; }
+  header.header-profile .logo h1 {
+    color: white;
+    font-weight: bold; }
+  header.header-profile nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex; }
+    header.header-profile nav ul .header-user {
+      padding-left: 50px; }
+      header.header-profile nav ul .header-user img {
+        width: 45px;
+        height: 45px;
+        margin-right: 5px; }
+    header.header-profile nav ul li {
+      display: flex;
+      align-items: center;
+      padding-right: 10px; }
+      header.header-profile nav ul li a i:hover {
+        text-decoration: none;
+        color: #5fedb6; }
+      header.header-profile nav ul li a:hover {
+        text-decoration: none;
+        color: #5fedb6; }
+      header.header-profile nav ul li a {
+        color: white;
+        font-size: 19px;
+        font-weight: lighter; }
+        header.header-profile nav ul li a i {
+          font-weight: normal !important;
+          padding-right: 3px;
+          font-size: 34px !important;
+          color: white; }
 
 /*
 ///////////////////////////////////////
@@ -730,5 +777,77 @@ header {
   .file-upload input[type='file'] {
     height: 65px;
     width: 65px; }
+
+/*
+///////////////////////////////////////
+  PROFILE
+//////////////////////////////////////
+*/
+.c-top-profile {
+  margin-top: 0px; }
+
+.profile-top {
+  width: 100%;
+  height: 100vh;
+  background-size: cover !important;
+  background-position: center !important; }
+  .profile-top .profile-top-info {
+    width: 100%;
+    height: 100vh; }
+  .profile-top .profile-top-bg {
+    width: 100%;
+    background: -moz-linear-gradient(top, transparent 35%, rgba(0, 0, 0, 0.01) 36%, rgba(0, 0, 0, 0.65) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, transparent 35%, rgba(0, 0, 0, 0.01) 36%, rgba(0, 0, 0, 0.65) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, transparent 35%, rgba(0, 0, 0, 0.01) 36%, rgba(0, 0, 0, 0.65) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+    /* IE6-9 */
+    padding: 50px 35px;
+    height: 100vh;
+    display: flex;
+    align-items: flex-end;
+    color: white; }
+    .profile-top .profile-top-bg .profile-top-info-pp img {
+      width: 100px;
+      height: 100px; }
+    .profile-top .profile-top-bg .profile-top-info-name-bio {
+      margin-left: 20px; }
+      .profile-top .profile-top-bg .profile-top-info-name-bio h2 {
+        font-size: 42px;
+        font-weight: lighter;
+        display: block;
+        margin: 0;
+        padding: 0; }
+      .profile-top .profile-top-bg .profile-top-info-name-bio p {
+        margin: 0;
+        padding: 0;
+        font-size: 19px;
+        font-weight: lighter; }
+    .profile-top .profile-top-bg .profile-top-numbers ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex; }
+      .profile-top .profile-top-bg .profile-top-numbers ul li {
+        padding-right: 25px;
+        text-align: center; }
+        .profile-top .profile-top-bg .profile-top-numbers ul li h6 {
+          font-size: 24px;
+          font-weight: lighter;
+          display: block; }
+        .profile-top .profile-top-bg .profile-top-numbers ul li span {
+          font-size: 18px;
+          font-weight: lighter; }
+    .profile-top .profile-top-bg .profile-top-cta {
+      margin: 10px 0 30px; }
+      .profile-top .profile-top-bg .profile-top-cta a {
+        color: white;
+        background: #5fedb6;
+        border-radius: 10px;
+        padding: 10px 45px;
+        font-size: 19px;
+        font-weight: bold; }
 
 /*# sourceMappingURL=main.css.map */
