--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -4,7 +4,7 @@ $accent : #5fedb6;
 $accentDark : #2396cd;
 $black : #5b6775;
 $white :white;
-$grey : #ccc;
+$grey : #e7ecf4;
 
 //Importamos las fuentes
 @import url('https://fonts.googleapis.com/css?family=Leckerli+One');
@@ -24,6 +24,9 @@ main{
 	overflow: hidden;
 }
 
+.p-bt{
+	padding: 120px 0 100px;
+}
 .section-title{
 	margin-bottom: 20px;
 
@@ -55,6 +58,10 @@ main{
 	display: none;
 }
 
+.bg-magic{
+	background-image:linear-gradient(-225deg, #D4FFEC 0%, #57F2CC 48%, #4596FB 100%);
+
+}
 
 .flex-uses{
 	display: flex;
@@ -93,8 +100,24 @@ main{
 	background-image:linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
 }
 
+.btn-action-colored{
+	background-image:linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+	padding: 12.5px 40px;
+	border-radius: 6px;
+	font-size: 19px;
+	font-weight: bold;
+	color: $white;
+	border:none;
+	cursor: pointer;
+}
+.btn-action-colored:hover{
+	text-decoration: none;
+	color: $white;
+	background-image:linear-gradient(135deg, #475fca 0%, #764ba2 100%);
+}
+
 #link-novalid{
-	background-image:linear-gradient(-225deg, #D4FFEC 0%, #57F2CC 48%, #4596FB 100%);
+	background-image:linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 	width: 100%;
 	height: 100vh;
 	display: flex;
@@ -1280,6 +1303,82 @@ $duration: 1.4s;
 }
 
 
+/*
+///////////////////////////////////////
+  SETTINGS
+//////////////////////////////////////
+*/
+.settings-container{
+	
+}
+
+.settings{
+	height: auto;
+	overflow: hidden;
+	background: $white;
+	border-radius:6px;
+	-webkit-box-shadow: inset 0 0 0px rgba(0,0,0,0);
+	padding: 30px;
+	box-sizing:border-box;
+	border:1px solid #f3f5f9;
+
+	.settings-pp{
+		
+		width: 100%;
+		height: auto;
+		overflow: hidden;
+		padding: 10px 0;
+		text-align: center;
+
+		img{
+			width: 100px;
+			height: 100px;
+			margin:0px auto 10px;
+			display: block;
+		}
+	}
+
+	.settings-item{
+		width: 100%;
+		display: block;
+		height: auto;
+		overflow: hidden;
+		margin:10px 0;
+
+		label{
+			color: $white;
+		}
+
+		input[type="text"]{
+			width: 90%;
+			margin:0 auto;
+			border:2px solid $white;
+			border-radius:50px;
+			height: 50px;
+			outline: none;
+			padding-left: 16px;
+			box-sizing:border-box;
+		}
+	}
+
+	.form-group{
+
+		i{
+			color: $accent;
+			font-size: 32px;
+			padding-right: 5px;
+		}
+
+		label{
+			font-weight: bold;
+		}
+
+		input,textarea{
+			border:2px solid $grey !important; 
+		}
+	}
+
+}
 
 
 
