--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -573,7 +573,7 @@ header{
 	display: flex;
 	justify-content:space-between;
 	align-items:center;
-	background: transparent;
+	background: $white;
 	padding: 0 20px;
 	position: fixed;
 	top: 0;
