--- a/public/css/main.css
+++ b/public/css/main.css
@@ -413,7 +413,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: transparent;
+  background: white;
   padding: 0 20px;
   position: fixed;
   top: 0;
