Profile cta segun tipo de perfil
Agregamos la función para que el sistema distinga si está en su propia perfil, muestre el botón de settings y si está en el perfil de otra persona muestre el botón de follow

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -162,6 +162,14 @@ main{
 //////////////////////////////////////
 */
 
+#followBtn{
+	display: none;
+}
+
+#settingsBtn{
+	display: none;
+}
+
 .profile{
 	background: url(http://68.media.tumblr.com/d30666c2b15d952d15313ec2904a0752/tumblr_ngjgisRbe61sh3sfao1_1280.jpg);
 	background-size: cover;
