--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,6 +133,9 @@ main {
 #settingsBtn {
   display: none; }
 
+#followingBtn {
+  display: none; }
+
 .profile {
   background: url(http://68.media.tumblr.com/d30666c2b15d952d15313ec2904a0752/tumblr_ngjgisRbe61sh3sfao1_1280.jpg);
   background-size: cover;
@@ -690,14 +693,27 @@ header.header-profile {
           font-size: 18px;
           font-weight: lighter; }
     .profile-top .profile-top-bg .profile-top-cta {
-      margin: 10px 0 30px; }
-      .profile-top .profile-top-bg .profile-top-cta a {
-        color: white;
-        background: #5fedb6;
-        border-radius: 10px;
-        padding: 10px 45px;
-        font-size: 19px;
-        font-weight: bold; }
+      height: 50px;
+      margin: 10px 0 20px; }
+
+#followBtn {
+  background: #5fedb6 !important;
+  border: none !important;
+  cursor: pointer; }
+
+#followBtn:hover {
+  background: white !important;
+  color: #5fedb6 !important; }
+
+#followingBtn {
+  color: #5fedb6 !important;
+  border-color: #5fedb6 !important;
+  cursor: pointer; }
+
+#followingBtn:hover {
+  color: white !important;
+  border-color: white !important;
+  background: transparent !important; }
 
 /*
 ///////////////////////////////////////
